@@ -84,7 +84,7 @@ check_simple([TYPE_UUID], [ '00000000-0000-0000-0000-000000000000', 'ffffffff-ff
 check_simple([TYPE_VARCHAR], [ 'test', 'a', '', undef, '0' ]);
 
 # Varint
-## Not implemented
+check_simple([TYPE_VARINT], [ 1, 1000, 1000000, 1000000000, -1, -1000, -1000000, -1000000000, "100000000000", "1000000000000000000000000", "-1000000000000000000000000", "1000000000000000000000000000000000000000000000000000000000000000000"]);
 
 # Timeuuid
 check_simple([TYPE_TIMEUUID], [ '568ef050-5aca-11e5-9c6b-eb15c19b7bc8', undef ]);
